--- a/Workspace/WebContent/WEB-INF/web.xml
+++ b/Workspace/WebContent/WEB-INF/web.xml
@@ -53,7 +53,7 @@
   
   <servlet>
     <servlet-name>action</servlet-name>
-    <servlet-class>framework.action.ActionServlet</servlet-class>
+    <servlet-class>workspace.action.ActionServlet</servlet-class>
     <init-param>
       <param-name>security_xsl</param-name>
       <param-value>/Xsl/WorkSpace_Security.xsl</param-value>
