--- a/Workspace/pom.xml
+++ b/Workspace/pom.xml
@@ -22,6 +22,308 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-antlr -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-antlr</artifactId>
+			<version>1.8.2</version>
+			<scope>runtime</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-apache-bcel -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-apache-bcel</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-apache-bsf -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-apache-bsf</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-apache-log4j -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-apache-log4j</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-apache-oro -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-apache-oro</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-apache-regexp -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-apache-regexp</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-apache-resolver -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-apache-resolver</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-apache-xalan2 -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-apache-xalan2</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-commons-logging -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-commons-logging</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-commons-net -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-commons-net</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-jai -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-jai</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-javamail -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-javamail</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-jdepend -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-jdepend</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-jmf -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-jmf</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-jsch -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-jsch</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-junit -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-junit</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-junit4 -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-junit4</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-launcher -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-launcher</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-netrexx -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-netrexx</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-swing -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-swing</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-testutil -->
+		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-testutil</artifactId>
+			<version>1.8.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.appengine/appengine-api-1.0-sdk -->
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-api-1.0-sdk</artifactId>
+			<version>1.2.6</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.appengine/appengine-api-labs -->
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-api-labs</artifactId>
+			<version>1.2.6</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/netbeans/cvslib -->
+		<dependency>
+			<groupId>netbeans</groupId>
+			<artifactId>cvslib</artifactId>
+			<version>3.6</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.datanucleus/datanucleus-core -->
+		<!-- datanucleus-core-1.1.5 -->
+		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-core</artifactId>
+			<version>1.1.5</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.appengine.orm/datanucleus-appengine -->
+		<!-- datanucleus-appengine-1.0.3.jar ? -->
+		<dependency>
+			<groupId>com.google.appengine.orm</groupId>
+			<artifactId>datanucleus-appengine</artifactId>
+			<version>1.0.4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.datanucleus/datanucleus-jpa -->
+		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-jpa</artifactId>
+			<version>1.1.5</version>
+			<scope>runtime</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.geronimo.specs/geronimo-jpa_2.0_spec -->
+		<!-- geronimo-jpa_3.0_spec-1.1.1 ? -->
+		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-jpa_2.0_spec</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/geronimo-spec/geronimo-spec-jta -->
+		<!-- geronimo-jta_1.1_spec-1.1.1 ? -->
+		<dependency>
+			<groupId>geronimo-spec</groupId>
+			<artifactId>geronimo-spec-jta</artifactId>
+			<version>1.0.1B-rc4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>1.5</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.codehaus.guessencoding/guessencoding -->
+		<dependency>
+			<groupId>org.codehaus.guessencoding</groupId>
+			<artifactId>guessencoding</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.gwt/gwt-servlet -->
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-servlet</artifactId>
+			<version>1.5.3</version>
+			<scope>runtime</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/hibernate/hibernate3 -->
+		<dependency>
+			<groupId>hibernate</groupId>
+			<artifactId>hibernate3</artifactId>
+			<version>3.2.r14201-2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/hibernate/hibernate3 -->
+		<dependency>
+			<groupId>hibernate</groupId>
+			<artifactId>hibernate3</artifactId>
+			<version>3.2.r14201-2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.jms/jms -->
+		<dependency>
+			<groupId>javax.jms</groupId>
+			<artifactId>jms</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.jdo/jdo2-api -->
+		<!-- jdo2-api-2.3-eb.jar -->
+		<dependency>
+			<groupId>javax.jdo</groupId>
+			<artifactId>jdo2-api</artifactId>
+			<version>2.3-ec</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.gnu/jel -->
+		<!-- jel.jar -->
+		<dependency>
+			<groupId>org.gnu</groupId>
+			<artifactId>jel</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		<!-- ?? JevaESUI2001-03-03.jar ?? ->
+		<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+		<!-- json-lib-2.3-jdk15 ? -->
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<!-- mysql-connector-java-5.1.5-bin.jar ? -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.44</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/apache-xalan/serializer -->
+		<!-- serializer.jar ? -->
+		<!-- org.apache.xml.serializer -->
+		<dependency>
+			<groupId>apache-xalan</groupId>
+			<artifactId>serializer</artifactId>
+			<version>2.7.1.patch01-brew</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.eclipse.birt.runtime.3_7_1/org.apache.xml.serializer -->
+		<!-- serializer.jar ? -->
+		<!-- org.apache.xml.serializer -->
+		<dependency>
+			<groupId>org.eclipse.birt.runtime.3_7_1</groupId>
+			<artifactId>org.apache.xml.serializer</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.wutka/dtdparser -->
+		<!-- ShowDTDTree.jar ? -->
+		<dependency>
+			<groupId>com.wutka</groupId>
+			<artifactId>dtdparser</artifactId>
+			<version>1.21</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.tmatesoft.svnkit/svnkit -->
+		<!-- svnkit.jar 1.5.0_16-133 ? -->
+		<dependency>
+			<groupId>org.tmatesoft.svnkit</groupId>
+			<artifactId>svnkit</artifactId>
+			<version>1.4.0r5829.atlassian</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.sun/tools -->
+		<dependency>
+			<groupId>com.sun</groupId>
+			<artifactId>tools</artifactId>
+			<version>1.6.0.16</version>
+			<scope>system</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/xalan/xalan -->
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+		<!-- ??? xsltc.jar ??? dans xalan-2.7.1 ? -->
+
+
+
+
 	</dependencies>
 
 	<build>
