--- a/Workspace/pom.xml
+++ b/Workspace/pom.xml
@@ -95,6 +95,12 @@
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant-jai</artifactId>
 			<version>1.8.2</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.sun.media</groupId>
+					<artifactId>jai-codec</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-javamail -->
 		<dependency>
@@ -130,7 +136,7 @@
 		<dependency>
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant-junit4</artifactId>
-			<version>1.8.2</version>
+			<version>1.8.4</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant-launcher -->
 		<dependency>
@@ -160,13 +166,13 @@
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-1.0-sdk</artifactId>
-			<version>1.2.6</version>
+			<version>1.2.8</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.google.appengine/appengine-api-labs -->
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-labs</artifactId>
-			<version>1.2.6</version>
+			<version>1.2.8</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/netbeans/cvslib -->
 		<dependency>
@@ -229,45 +235,59 @@
 			<version>1.5.3</version>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/hibernate/hibernate3 -->
+		<!-- https://mvnrepository.com/artifact/hibernate/hibernate3>
 		<dependency>
 			<groupId>hibernate</groupId>
 			<artifactId>hibernate3</artifactId>
 			<version>3.2.r14201-2</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/hibernate/hibernate3 -->
+		</dependency-->
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate -->
 		<dependency>
-			<groupId>hibernate</groupId>
-			<artifactId>hibernate3</artifactId>
-			<version>3.2.r14201-2</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate</artifactId>
+			<version>3.5.4-Final</version>
+			<type>pom</type>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.jms/jms -->
+		<!--dependency>
+			<groupId>javax.jms</groupId>
+			<artifactId>jms</artifactId>
+			<version>1.1</version>
+		</dependency-->
 		<!-- https://mvnrepository.com/artifact/javax.jms/jms -->
 		<dependency>
 			<groupId>javax.jms</groupId>
 			<artifactId>jms</artifactId>
-			<version>1.1</version>
+			<version>1.0.2b</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.jdo/jdo2-api -->
 		<!-- jdo2-api-2.3-eb.jar -->
-		<dependency>
+		<!--dependency>
 			<groupId>javax.jdo</groupId>
 			<artifactId>jdo2-api</artifactId>
 			<version>2.3-ec</version>
+		</dependency-->
+		<!-- https://mvnrepository.com/artifact/javax.jdo/jdo2-api -->
+		<dependency>
+			<groupId>javax.jdo</groupId>
+			<artifactId>jdo2-api</artifactId>
+			<version>2.3-20090302111651</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.gnu/jel -->
 		<!-- jel.jar -->
-		<dependency>
+		<!--dependency>
 			<groupId>org.gnu</groupId>
 			<artifactId>jel</artifactId>
 			<version>2.0.1</version>
-		</dependency>
-		<!-- ?? JevaESUI2001-03-03.jar ?? ->
+		</dependency-->
+		<!-- ?? JevaESUI2001-03-03.jar ?? -->
 		<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
 		<!-- json-lib-2.3-jdk15 ? -->
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
 			<artifactId>json-lib</artifactId>
 			<version>2.3</version>
+			<!-- systemPath>/DevJ2EE/.m2/repository/net/sf/json-lib/json-lib/2.3/json-lib-2.3-jdk15.jar</systemPath-->
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<!-- mysql-connector-java-5.1.5-bin.jar ? -->
@@ -310,8 +330,7 @@
 		<dependency>
 			<groupId>com.sun</groupId>
 			<artifactId>tools</artifactId>
-			<version>1.6.0.16</version>
-			<scope>system</scope>
+			<version>1.5.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/xalan/xalan -->
 		<dependency>
